update logo src

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="refresh" content="0; url='./Front-end/index.html'" />
         <title>Codegames version2.0 featuring html and css</title>
-        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/frederikja163/CodeGames/version2.x-dev/Front-end/assets/Codegames-icon.png"/>
+        <link rel="icon" type="image/png" href="./assets/Codegames-icon.png"/>
     </head>
     <body>
     </body>
