--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -41,7 +41,7 @@
                     <h3>Room ID</h3>
                     <p>Enter the ID of the room you want to join, or leave blank to join a random room</p>
                     <input class="inputTxt" id="welcomeInputRid" type="text" name="rid" placeholder="Room ID">
-                    <a href="https://github.com/frederikja163/CodeGames/blob/version2.x-dev/README.md">Source<a><br>
+                    <a href="https://github.com/frederikja163/CodeGames/blob/main/README.md">Source<a><br>
                     <input id="joinBtn" class="btn" type="button" onclick="joinBtnOnClick()" value="Join">
                 </form>
             </div>
