--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -109,7 +109,7 @@
             </div>
 
             <!-- Start game button -->
-            <button class="owner" id="start" style="display: none">Start</button>
+            <button class="owner" id="start" style="display: none" onclick="startBtnPressed()">Start</button>
 
             <!-- Leave button -->
             <button id="leave" onclick="leaveRoom()">Leave</button>
