--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -15,6 +15,7 @@
         <script src="js/lobby/lobby.js"></script>
         <script src="js/lobby/playerList.js"></script>
         <script src="js/lobby/options.js"></script>
+        <script src="js/game/incoming.js"></script>
         <script src="js/welcome.js"></script>
 
         <link rel="stylesheet" href="css/main.css">
