--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -16,11 +16,13 @@
         <script src="js/lobby/playerList.js"></script>
         <script src="js/lobby/options.js"></script>
         <script src="js/game/incoming.js"></script>
+        <script src="js/game/game.js"></script>
         <script src="js/welcome.js"></script>
 
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/welcome.css">
         <link rel="stylesheet" href="css/lobby.css">
+        <link rel="stylesheet" href="css/game.css">
         <link rel="icon" type="image/png" href="./assets/Codegames-icon.png"/>
     </head>
     <body>
@@ -118,7 +120,15 @@
 
         <!-- Game -->
         <page id="game">
-
+            <!-- Info -->
+            <div class="box" id="info">
+            </div>
+            <!-- Board -->
+            <table class="box" id="board">
+            </table>
+            <!-- Word -->
+            <div class="box" id="word">
+            </div>
         </page>
     </body>
 </html>
