--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -10,6 +10,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js" integrity="sha256-Dul4c09cdrWKXVtallPxF558lwxMwCC8dXJdZ0PVW54=" crossorigin="anonymous"></script>
         <script src="js/server.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/utils.js"></script>
         <script src="js/lobby/incoming.js"></script>
         <script src="js/lobby/outgoing.js"></script>
         <script src="js/lobby/lobby.js"></script>
@@ -120,14 +121,27 @@
 
         <!-- Game -->
         <page id="game">
+            <!-- Player list -->
+            <div class="box" id="gamePlayers">
+                <h2>Players in Room</h2>
+                <ul id="teams">
+                    <li class="box">
+                        <h3>Spectators</h3>
+                        <ul>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
             <!-- Info -->
             <div class="box" id="info">
+                WIP info
             </div>
             <!-- Board -->
             <table class="box" id="board">
             </table>
             <!-- Word -->
             <div class="box" id="word">
+                WIP word
             </div>
         </page>
     </body>
