commit before playerlist

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -21,6 +21,7 @@
         <script src="js/welcome.js"></script>
 
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/playerlist.css">
         <link rel="stylesheet" href="css/welcome.css">
         <link rel="stylesheet" href="css/lobby.css">
         <link rel="stylesheet" href="css/game.css">
@@ -54,7 +55,7 @@
         <!-- Lobby -->
         <page id="lobby">
             <!-- Player list -->
-            <div class="box wall" id="players">
+            <div class="box wall playerlist" id="players">
                 <h2>Players in Room</h2>
                 <ul id="teams">
                     <li class="box">
@@ -122,7 +123,7 @@
         <!-- Game -->
         <page id="game">
             <!-- Player list -->
-            <div class="box" id="gamePlayers">
+            <div class="box playerlist" id="gamePlayers">
                 <h2>Players in Room</h2>
                 <ul id="teams">
                     <li class="box">
