--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -11,6 +11,7 @@
         <script src="js/server.js"></script>
         <script src="js/main.js"></script>
         <script src="js/utils.js"></script>
+        <script src="js/incoming.js"></script>
         <script src="js/lobby/incoming.js"></script>
         <script src="js/lobby/outgoing.js"></script>
         <script src="js/lobby/lobby.js"></script>
@@ -55,7 +56,7 @@
         <!-- Lobby -->
         <page id="lobby">
             <!-- Player list -->
-            <div class="box wall playerlist" id="players">
+            <div class="box wall playerlist">
                 <h2>Players in Room</h2>
                 <ul id="teams">
                     <li class="box">
@@ -122,7 +123,7 @@
 
         <!-- Game -->
         <page id="game">
-            <!-- Player list -->
+            <!-- Player list 
             <div class="box playerlist" id="gamePlayers">
                 <h2>Players in Room</h2>
                 <ul id="teams">
@@ -133,6 +134,7 @@
                     </li>
                 </ul>
             </div>
+            -->
             <!-- Info -->
             <div class="box" id="info">
                 WIP info
