leave ingame fix

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -12,6 +12,7 @@
         <script src="js/main.js"></script>
         <script src="js/utils.js"></script>
         <script src="js/incoming.js"></script>
+        <script src="js/welcome.js"></script>
         <script src="js/lobby/incoming.js"></script>
         <script src="js/lobby/outgoing.js"></script>
         <script src="js/lobby/lobby.js"></script>
@@ -19,13 +20,14 @@
         <script src="js/lobby/options.js"></script>
         <script src="js/game/incoming.js"></script>
         <script src="js/game/game.js"></script>
-        <script src="js/welcome.js"></script>
+        <script src="js/wait.js"></script>
 
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/playerlist.css">
         <link rel="stylesheet" href="css/welcome.css">
         <link rel="stylesheet" href="css/lobby.css">
         <link rel="stylesheet" href="css/game.css">
+        <link rel="stylesheet" href="css/wait.css">
         <link rel="icon" type="image/png" href="./assets/Codegames-icon.png"/>
     </head>
     <body>
@@ -146,6 +148,9 @@
             <div class="box" id="word">
                 WIP word
             </div>
+        </page>
+        <page id="wait">
+            Wait
         </page>
     </body>
 </html>
