--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -148,8 +148,11 @@
             <div class="box" id="word">
                 <form onsubmit="wordSend()" action="javascript:void(0);">
                     <input class="inputTxt" placeholder="Give word">
-                    <input class="btn2" style="display=inline" type="submit" value="Submit">
+                    <input class="btn2 icon" type="image" src="https://raw.githubusercontent.com/frederikja163/CodeGames/gamedev/Front-end/assets/miscIcons/compass.png">
                 </form>
+                <div>
+                    Word 3
+                </div>
             </div>
         </page>
         <page id="wait">
