--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -146,8 +146,9 @@
             </table>
             <!-- Word -->
             <div class="box" id="word">
-                <form onsubmit="wordSend()" action="javascript:void(0);">
-                    <input class="inputTxt" placeholder="Give word">
+                <form onsubmit="giveWord()" action="javascript:void(0);">
+                    <input class="inputTxt wordField" placeholder="Give word">
+                    <input class="inputTxt countField" placeholder="Word count">
                     <input class="btn2 icon" type="image" src="https://raw.githubusercontent.com/frederikja163/CodeGames/gamedev/Front-end/assets/miscIcons/compass.png">
                 </form>
                 <div>
