select all words fixed

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -151,9 +151,7 @@
                     <input class="inputTxt countField" placeholder="Word count">
                     <input class="btn2 icon" type="image" src="https://raw.githubusercontent.com/frederikja163/CodeGames/gamedev/Front-end/assets/miscIcons/compass.png">
                 </form>
-                <div>
-                    Word 3
-                </div>
+                <div></div>
             </div>
         </page>
         <page id="wait">
