--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -90,6 +90,17 @@
                         </div>
                         <img class="guest" id="currentLang" src="./assets/packs/en/flag.png" alt="EN"></img>
                     </li>
+                    <li class="wordCountTitle">Word count:</li>
+                    <li class="wordCountOption">
+                        <form onsubmit="setWordCount()" action="javascript:void(0);">
+                            <input class="inputTxt" value="25" placeholder="0"></input>
+                        </form>
+                    </li>
+                    <li class="teamWordCountTitle">Team word count:</li>
+                    <li class="teamWordCountOption">
+                        <form class="box" onsubmit="setWordCount()" action="javascript:void(0);">
+                        </form>
+                    </li>
                     <li id="wordsTitle">Words:</li>
                     <li class="box" id="dropMenu">
                         <ol>
