wordcount added to options

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -96,9 +96,10 @@
                             <input class="inputTxt" value="25" placeholder="0"></input>
                         </form>
                     </li>
-                    <li class="teamWordCountTitle">Team word count:</li>
-                    <li class="teamWordCountOption">
-                        <form class="box" onsubmit="setWordCount()" action="javascript:void(0);">
+                    <li class="killerWordCountTitle">Killer word count:</li>
+                    <li class="killerWordCountOption">
+                        <form onsubmit="setKillerWordCount()" action="javascript:void(0);">
+                            <input class="inputTxt" value="5" placeholder="0"></input>
                         </form>
                     </li>
                     <li id="wordsTitle">Words:</li>
