--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -93,13 +93,15 @@
                     <li class="wordCountTitle">Word count:</li>
                     <li class="wordCountOption">
                         <form onsubmit="setWordCount()" action="javascript:void(0);">
-                            <input class="inputTxt" value="25" placeholder="0"></input>
+                            <input class="owner inputTxt" value="25" placeholder="0"></input>
+                            <label class="guest">0</label>
                         </form>
                     </li>
                     <li class="killerWordCountTitle">Killer word count:</li>
                     <li class="killerWordCountOption">
                         <form onsubmit="setKillerWordCount()" action="javascript:void(0);">
-                            <input class="inputTxt" value="5" placeholder="0"></input>
+                            <input class="owner inputTxt" value="5" placeholder="0"></input>
+                            <label class="guest">0</label>
                         </form>
                     </li>
                     <li id="wordsTitle">Words:</li>
