--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -156,7 +156,7 @@
             <div class="box" id="info">
                 <div class="givenWord"></div>
                 <form onsubmit="endTurn()" action="javascript:void(0);">
-                    <input class="btn2" type="image" alt="End turn" src="https://raw.githubusercontent.com/frederikja163/CodeGames/gamedev/Front-end/assets/miscIcons/skip.png">
+                    <input class="btn2 icon" type="image" alt="End turn" src="https://raw.githubusercontent.com/frederikja163/CodeGames/gamedev/Front-end/assets/miscIcons/skip.png">
                 </form>
             </div>
             <!-- Board -->
