--- a/Front-end/faq/index.html
+++ b/Front-end/faq/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <a id="backBtn" class="btn2" href="../index.html">
-            <img alt="back" scr="https://raw.githubusercontent.com/frederikja163/CodeGames/gamedev/Front-end/assets/miscIcons/arrow.png"></img>
+            <img alt="back" class="icon" src="./../assets/miscIcons/arrow.png"></img>
         </a>
         <h2>Add wordpacks</h2>
         <a id="formLink" href="https://forms.gle/K4S3eHmuVLbvY4h48" target="_blank">Click here to open the form!</a>
