--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -8,6 +8,8 @@
         <![endif]-->
         <title>Codegames version2.0 featuring html and css</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js" integrity="sha256-Dul4c09cdrWKXVtallPxF558lwxMwCC8dXJdZ0PVW54=" crossorigin="anonymous"></script>
+        <script>let module = {};</script>
+        <script src="../Common/roomCheck.js"></script>
         <script src="js/server.js"></script>
         <script src="js/main.js"></script>
         <script src="js/utils.js"></script>
