--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -156,6 +156,9 @@
             -->
             <!-- Info -->
             <div class="box" id="info">
+                <div class="btn" onclick="backToLobbyBtn()" style=" width: 50px; height: 50px; color: black; ">
+                    To lobby
+                </div>
                 <div class="givenWord"></div>
                 <form onsubmit="endTurn()" action="javascript:void(0);">
                     <input class="btn2 icon" type="image" alt="End turn" src="https://raw.githubusercontent.com/frederikja163/CodeGames/gamedev/Front-end/assets/miscIcons/skip.png">
