--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -156,7 +156,7 @@
             -->
             <!-- Info -->
             <div class="box" id="info">
-                <div class="btn" onclick="backToLobbyBtn()" style=" width: 50px; height: 50px; color: black; ">
+                <div id="backToLobbyBtn" class="btn" onclick="backToLobbyBtn()">
                     To lobby
                 </div>
                 <div class="givenWord"></div>
