lobbybtn and words

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -118,7 +118,7 @@
                                 
                             </ul>
                         </div>
-                        <input class="inputTxt owner" id="wordsField" placeholder="Words" onchange="wordsChange()" style="display: none"></input>
+                        <textarea class="inputTxt owner" id="wordsField" placeholder="Words" onchange="wordsChange()" style="display: none"></textarea>
                         <div class="box guest" id="wordsTxt">Words</div>
                     </li>
                 </ul>
