--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -81,7 +81,7 @@
                         <button class="btn2 owner" onclick="addTeam()" style="display: none; padding: 0" >
                             <img class="icon" src="./assets/miscIcons/plus.png" alt="+">
                         </button>
-                        <button class="btn2 owner" onclick="removeTeam()" style="display: none; padding: 0" >
+                        <button class="btn2 owner" onclick="removeTeamBtn()" style="display: none; padding: 0" >
                             <img class="icon" src="./assets/miscIcons/minus.png" alt="-">
                         </button>
                     </li>
