textarea for guests as wordsfield

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -119,7 +119,7 @@
                             </ul>
                         </div>
                         <textarea class="inputTxt owner" id="wordsField" placeholder="Words" onchange="wordsChange()" style="display: none"></textarea>
-                        <div class="box guest" id="wordsTxt">Words</div>
+                        <textarea class="inputTxt guest" id="wordsTxt" placeholder="Words" disabled></textarea>
                     </li>
                 </ul>
             </div>
