--- a/Front-end/faq/index.html
+++ b/Front-end/faq/index.html
@@ -21,5 +21,7 @@
         </a>
         <h2>Add wordpacks</h2>
         <a id="formLink" href="https://forms.gle/K4S3eHmuVLbvY4h48" target="_blank">Click here to open the form!</a>
+        <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        <p>Suggestion and bug feedback form coming soon.</p>
     </body>
 </html>
