--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -162,7 +162,7 @@
                 </div>
                 <div class="givenWord"></div>
                 <form onsubmit="endTurn()" action="javascript:void(0);">
-                    <input class="btn2 icon" type="image" alt="End turn" src="https://raw.githubusercontent.com/frederikja163/CodeGames/gamedev/Front-end/assets/miscIcons/skip.png">
+                    <input class="btn2 icon" type="image" alt="End turn" src="./assets/miscIcons/skip.png">
                 </form>
             </div>
             <!-- Board -->
@@ -173,7 +173,7 @@
                 <form onsubmit="giveFormWord()" action="javascript:void(0);">
                     <input class="inputTxt wordField" placeholder="Give word">
                     <input class="inputTxt countField" placeholder="Word count">
-                    <input class="btn2 icon" type="image" alt="Give word" src="https://raw.githubusercontent.com/frederikja163/CodeGames/gamedev/Front-end/assets/miscIcons/compass.png">
+                    <input class="btn2 icon" type="image" alt="Give word" src="./assets/miscIcons/compass.png">
                 </form>
             </div>
         </page>
