--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
         <title>Codegames version2.0 featuring html and css</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js" integrity="sha256-Dul4c09cdrWKXVtallPxF558lwxMwCC8dXJdZ0PVW54=" crossorigin="anonymous"></script>
         <script>let module = {};</script>
-        <script src="../Common/roomCheck.js"></script>
-        <script src="js/server.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/utils.js"></script>
-        <script src="js/incoming.js"></script>
-        <script src="js/welcome.js"></script>
-        <script src="js/lobby/incoming.js"></script>
-        <script src="js/lobby/outgoing.js"></script>
-        <script src="js/lobby/lobby.js"></script>
-        <script src="js/lobby/playerList.js"></script>
-        <script src="js/lobby/options.js"></script>
-        <script src="js/game/incoming.js"></script>
-        <script src="js/game/outgoing.js"></script>
-        <script src="js/game/game.js"></script>
-        <script src="js/wait.js"></script>
+        <script src="Common/roomCheck.js"></script>
+        <script src="Front-end/js/server.js"></script>
+        <script src="Front-end/js/main.js"></script>
+        <script src="Front-end/js/utils.js"></script>
+        <script src="Front-end/js/incoming.js"></script>
+        <script src="Front-end/js/welcome.js"></script>
+        <script src="Front-end/js/lobby/incoming.js"></script>
+        <script src="Front-end/js/lobby/outgoing.js"></script>
+        <script src="Front-end/js/lobby/lobby.js"></script>
+        <script src="Front-end/js/lobby/playerList.js"></script>
+        <script src="Front-end/js/lobby/options.js"></script>
+        <script src="Front-end/js/game/incoming.js"></script>
+        <script src="Front-end/js/game/outgoing.js"></script>
+        <script src="Front-end/js/game/game.js"></script>
+        <script src="Front-end/js/wait.js"></script>
 
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/playerlist.css">
-        <link rel="stylesheet" href="css/welcome.css">
-        <link rel="stylesheet" href="css/lobby.css">
-        <link rel="stylesheet" href="css/game.css">
-        <link rel="stylesheet" href="css/wait.css">
-        <link rel="icon" type="image/png" href="./assets/Codegames-icon.png"/>
+        <link rel="stylesheet" href="Front-end/css/main.css">
+        <link rel="stylesheet" href="Front-end/css/playerlist.css">
+        <link rel="stylesheet" href="Front-end/css/welcome.css">
+        <link rel="stylesheet" href="Front-end/css/lobby.css">
+        <link rel="stylesheet" href="Front-end/css/game.css">
+        <link rel="stylesheet" href="Front-end/css/wait.css">
+        <link rel="icon" type="image/png" href="Front-end/assets/Codegames-icon.png"/>
     </head>
     <body>
         <div class="box debug" id="debugWarning">
@@ -40,7 +40,7 @@
         <!-- Welcome -->
         <page id="welcome">
             <!-- Logo / title -->
-            <img id="logo" src="./assets/Codegames-welcome.png">
+            <img id="logo" src="Front-end/assets/Codegames-welcome.png">
 
             <!-- Join box-->
             <div class="box" id="join">
@@ -80,19 +80,19 @@
                     <li id="countTitle">Team count: </li>
                     <li id="countOption">
                         <button class="btn2 owner" onclick="addTeam()" style="display: none; padding: 0" >
-                            <img class="icon" src="./assets/miscIcons/plus.png" alt="+">
+                            <img class="icon" src="Front-end/assets/miscIcons/plus.png" alt="+">
                         </button>
                         <button class="btn2 owner" onclick="removeTeamBtn()" style="display: none; padding: 0" >
-                            <img class="icon" src="./assets/miscIcons/minus.png" alt="-">
+                            <img class="icon" src="Front-end/assets/miscIcons/minus.png" alt="-">
                         </button>
                     </li>
                     <li id="langTitle">Language:</li>
                     <li id="langOption">
                         <div class="btn owner" id="dropBtn" onclick="langBtn()" style="display: none">
-                            <img src="./assets/packs/en/flag.png" alt="EN">
-                            <img class="icon" src="./assets/miscIcons/chevron.png" alt="\/">
+                            <img src="Front-end/assets/packs/en/flag.png" alt="EN">
+                            <img class="icon" src="Front-end/assets/miscIcons/chevron.png" alt="\/">
                         </div>
-                        <img class="guest" id="currentLang" src="./assets/packs/en/flag.png" alt="EN"></img>
+                        <img class="guest" id="currentLang" src="./Front-end/assets/packs/en/flag.png" alt="EN"></img>
                     </li>
                     <li class="wordCountTitle">Word count:</li>
                     <li class="wordCountOption">
@@ -126,7 +126,7 @@
             </div>
 
             <!-- Logo / title -->
-            <img id="logo" onclick="leaveRoom()" src="./assets/Codegames-large.png">
+            <img id="logo" onclick="leaveRoom()" src="Front-end/assets/Codegames-large.png">
 
             <!-- Name -->
             <div id="name">
@@ -162,7 +162,7 @@
                 </div>
                 <div class="givenWord"></div>
                 <form onsubmit="endTurn()" action="javascript:void(0);">
-                    <input class="btn2 icon" type="image" alt="End turn" src="./assets/miscIcons/skip.png">
+                    <input class="btn2 icon" type="image" alt="End turn" src="Front-end/assets/miscIcons/skip.png">
                 </form>
             </div>
             <!-- Board -->
@@ -173,7 +173,7 @@
                 <form onsubmit="giveFormWord()" action="javascript:void(0);">
                     <input class="inputTxt wordField" placeholder="Give word">
                     <input class="inputTxt countField" placeholder="Word count">
-                    <input class="btn2 icon" type="image" alt="Give word" src="./assets/miscIcons/compass.png">
+                    <input class="btn2 icon" type="image" alt="Give word" src="Front-end/assets/miscIcons/compass.png">
                 </form>
             </div>
         </page>
