--- a/faq/index.html
+++ b/faq/index.html
@@ -8,16 +8,16 @@
         <![endif]-->
         <title>Codegames version2.0 featuring html and css</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js" integrity="sha256-Dul4c09cdrWKXVtallPxF558lwxMwCC8dXJdZ0PVW54=" crossorigin="anonymous"></script>
-        <script src="../js/server.js"></script>
-        <script src="../js/main.js"></script>
+        <script src="../Front-end/js/server.js"></script>
+        <script src="../Front-end/js/main.js"></script>
 
-        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../Front-end/css/main.css">
         <link rel="stylesheet" href="css/faq.css">
-        <link rel="icon" type="image/png" href="../assets/Codegames-icon.png"/>
+        <link rel="icon" type="image/png" href="../Front-end/assets/Codegames-icon.png"/>
     </head>
     <body>
         <a id="backBtn" class="btn2" href="../index.html">
-            <img alt="back" class="icon" src="./../assets/miscIcons/arrow.png"></img>
+            <img alt="back" class="icon" src="./../Front-end/assets/miscIcons/arrow.png"></img>
         </a>
         <h2>Add wordpacks</h2>
         <a id="formLink" href="https://forms.gle/K4S3eHmuVLbvY4h48" target="_blank">Click here to open the form!</a>
