Added colors for given word and given word count.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@
                 <div id="backToLobbyBtn" class="btn" onclick="backToLobbyBtn()">
                     To lobby
                 </div>
-                <div class="givenWord"></div>
+                <div id="givenWord">
+                    <div class="box"></div>
+                    <div class="box"></div>
+                </div>
                 <form onsubmit="endTurn()" action="javascript:void(0);">
                     <input class="btn2 icon" type="image" alt="End turn" src="Front-end/assets/miscIcons/skip.png">
                 </form>
