--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div class="box"></div>
                     <div class="box"></div>
                 </div>
-                <form onsubmit="endTurn()" action="javascript:void(0);">
+                <form class="defaultCursorOnHover" onsubmit="endTurn()" action="javascript:void(0);">
                     <input class="btn2 icon" type="image" alt="End turn" src="Front-end/assets/miscIcons/skip.png">
                 </form>
             </div>
